--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             --kaspi-red: #f14635;
             --bg-color: #f2f2f5;
             --text-dark: #222222;
+            --gray-text: #8e8e93;
         }
 
         body {
@@ -31,20 +32,22 @@
         .search-bar {
             background-color: #f0f0f2;
             border-radius: 8px;
-            padding: 8px 12px;
-            color: #8e8e93;
+            padding: 9px 12px;
+            color: var(--gray-text);
             font-size: 15px;
             display: flex;
             align-items: center;
-            gap: 8px; /* Расстояние между лупой и текстом */
+            gap: 10px;
         }
 
-        /* Стиль новой лупы */
+        /* Иконка лупы */
         .search-icon {
             width: 16px;
             height: 16px;
             object-fit: contain;
-            opacity: 0.6; /* Делает её слегка серой, если она слишком черная */
+            opacity: 0.7;
+            /* Убираем возможные смещения */
+            display: block;
         }
 
         /* Сетка сервисов */
@@ -53,7 +56,7 @@
             grid-template-columns: repeat(4, 1fr);
             background: white;
             padding: 20px 5px;
-            gap: 20px 0;
+            gap: 22px 0;
         }
 
         .service-item {
@@ -147,12 +150,15 @@
             flex-direction: column;
             align-items: center;
             font-size: 10px;
-            color: #8e8e93;
+            color: var(--gray-text);
             gap: 4px;
         }
         .tab-item.active { 
             color: var(--kaspi-red); 
             font-weight: 700;
+        }
+        .tab-icon {
+            font-size: 20px;
         }
     </style>
 </head>
@@ -204,7 +210,7 @@
     <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
     <div style="flex:1">
         <div style="font-weight:700; font-size: 16px;">Magnum</div>
-        <div style="color:#8e8e93; font-size:13px;">Продукты питания с доставкой</div>
+        <div style="color:var(--gray-text); font-size:13px;">Продукты питания с доставкой</div>
     </div>
     <div style="color:#ccc; font-size: 18px;">❯</div>
 </div>
@@ -224,10 +230,10 @@
 </div>
 
 <div class="tab-bar">
-    <div class="tab-item active">🏠<div>Главная</div></div>
-    <div class="tab-item">🔳<div>Kaspi QR</div></div>
-    <div class="tab-item">💬<div>Сообщения</div></div>
-    <div class="tab-item">☰<div>Сервисы</div></div>
+    <div class="tab-item active"><span class="tab-icon">🏠</span><div>Главная</div></div>
+    <div class="tab-item"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
+    <div class="tab-item"><span class="tab-icon">💬</span><div>Сообщения</div></div>
+    <div class="tab-item"><span class="tab-icon">☰</span><div>Сервисы</div></div>
 </div>
 
 <script>
