--- a/index.html
+++ b/index.html
@@ -23,226 +23,14 @@
             -webkit-font-smoothing: antialiased;
         }
 
-        /* Обновленный контейнер поиска с иконкой справа */
+        /* Шапка с поиском и silvershop.png */
         .search-wrapper {
             background-color: white;
             padding: 10px 15px;
             display: flex;
             align-items: center;
-            gap: 15px; /* Отступ между поиском и иконкой silvershop */
+            gap: 15px;
             border-bottom: 1px solid #e5e5e5;
         }
 
-        .search-bar {
-            background-color: #f0f0f2;
-            border-radius: 8px;
-            padding: 9px 12px;
-            color: var(--gray-text);
-            font-size: 15px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            flex: 1; /* Поиск занимает всё свободное место, кроме иконки справа */
-        }
-
-        .search-icon {
-            width: 16px;
-            height: 16px;
-            object-fit: contain;
-            opacity: 0.7;
-        }
-
-        /* Иконка silvershop справа от поиска */
-        .header-extra-icon {
-            width: 24px;
-            height: 24px;
-            object-fit: contain;
-        }
-
-        /* Сетка сервисов */
-        .services-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            background: white;
-            padding: 20px 5px;
-            gap: 22px 0;
-        }
-
-        .service-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-
-        .icon-wrapper {
-            height: 44px;
-            width: 44px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 6px;
-        }
-
-        .service-icon {
-            width: 40px;
-            height: 40px;
-            object-fit: contain;
-            filter: drop-shadow(0.4px 0 0px #333) drop-shadow(-0.4px 0 0px #333) contrast(1.1) brightness(0.9);
-            transform: scale(1.05);
-        }
-
-        /* Индивидуальное исправление для Магазина */
-        img[src="shop.png"] {
-            transform: scale(1.25) !important;
-            filter: drop-shadow(0.4px 0 0px #333) drop-shadow(-0.4px 0 0px #333) contrast(1.1) brightness(0.9) !important;
-        }
-
-        .service-name {
-            font-size: 11.5px;
-            font-weight: 600;
-            color: var(--text-dark);
-            letter-spacing: -0.2px;
-        }
-
-        /* Блок Magnum */
-        .magnum-row {
-            background: white;
-            margin-top: 10px;
-            padding: 15px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            border-bottom: 1px solid #e5e5e5;
-        }
-
-        .section-title {
-            padding: 18px 15px 10px;
-            font-weight: 800;
-            font-size: 19px;
-            letter-spacing: -0.5px;
-        }
-
-        /* Слайдер товаров */
-        .products-scroll {
-            display: flex;
-            overflow-x: auto;
-            padding: 0 15px;
-            gap: 12px;
-            scrollbar-width: none;
-        }
-        .products-scroll::-webkit-scrollbar { display: none; }
-
-        .product-card {
-            min-width: 150px;
-            background: white;
-            border-radius: 12px;
-            padding: 12px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-        }
-
-        /* Нижнее меню */
-        .tab-bar {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: white;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            padding: 8px 0;
-            border-top: 1px solid #e5e5e5;
-            box-shadow: 0 -1px 10px rgba(0,0,0,0.03);
-            z-index: 100;
-        }
-        .tab-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-size: 10px;
-            color: var(--gray-text);
-            gap: 4px;
-        }
-        .tab-item.active { 
-            color: var(--kaspi-red); 
-            font-weight: 700;
-        }
-    </style>
-</head>
-<body>
-
-<div class="search-wrapper">
-    <div class="search-bar">
-        <img src="magnifier.png" class="search-icon">
-        Поиск по Kaspi.kz
-    </div>
-    <img src="silvershop.png" class="header-extra-icon">
-</div>
-
-<div class="services-grid">
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="qr.png" class="service-icon"></div>
-        <div class="service-name">Kaspi QR</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="bank.png" class="service-icon"></div>
-        <div class="service-name">Мой Банк</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="pay.png" class="service-icon"></div>
-        <div class="service-name">Платежи</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="transfer.png" class="service-icon"></div>
-        <div class="service-name">Переводы</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="shop.png" class="service-icon"></div>
-        <div class="service-name">Магазин</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="travel.png" class="service-icon"></div>
-        <div class="service-name">Travel</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="gos.png" class="service-icon"></div>
-        <div class="service-name">Госуслуги</div>
-    </div>
-    <div class="service-item">
-        <div class="icon-wrapper"><img src="ads.png" class="service-icon"></div>
-        <div class="service-name">Объявления</div>
-    </div>
-</div>
-
-<div class="magnum-row">
-    <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
-    <div style="flex:1">
-        <div style="font-weight:700; font-size: 16px;">Magnum</div>
-        <div style="color:var(--gray-text); font-size:13px;">Продукты питания с доставкой</div>
-    </div>
-    <div style="color:#ccc; font-size: 18px;">❯</div>
-</div>
-
-<div class="section-title">Вы недавно смотрели</div>
-<div class="products-scroll">
-    <div class="product-card">
-        <div style="background:#f8f8f8; height:110px; border-radius:8px; display:flex; align-items:center; justify-content:center; color:#ccc;">Фото</div>
-        <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 1</div>
-        <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
-    </div>
-    <div class="product-card">
-        <div style="background:#f8f8f8; height:110px; border-radius:8px; display:flex; align-items:center; justify-content:center; color:#ccc;">Фото</div>
-        <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 2</div>
-        <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
-    </div>
-</div>
-
-<div class="tab-bar">
-    <div class="tab-item active"><span class="tab-icon">🏠</span><div>Главная</div></div>
-    <div class="tab-item"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
-    <div class="tab-item"><span class="tab-icon">💬</span><div>Сообщения</div></div>
-    <div class="tab-item"><span class="tab-icon">☰</span><div>Сервисы</div></div>
-</div>
-
-<script>
-    const tg = window.Telegram.WebApp;
-    tg.expand();
+        .search-bar
